--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,14 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: Master of Science in Information Design and Strategy
+  uni: Northwestern University
+  year: Expected graduation 2025 GPA 3.9/4
   awards:
     - award: Summa Cumme Laude graduate
   summary: If you had any meaningful roles at college, feel free to write about them here
-
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
+  
+  
+- degree: Master of Business Administration
+  uni: University of Illinois, Springfield
+  year: 2017
   award: Most likely to succeed
   summary: You can choose to have either a single or multiple awards
