--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,14 +1,14 @@
 # Degree
 - degree: Master of Science in Information Design and Strategy
   uni: Northwestern University
-  year: Expected graduation 2025 GPA 3.9/4
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+  year: Expected graduation 2025 
+  awards: Graduate Certificate in Data Communication 2023 GPA 3.9/4
+  summary: GPA 3.9/4
   
   
 - degree: Master of Business Administration
   uni: University of Illinois, Springfield
   year: 2017
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+  award: Graduate Certificate in Business Intelligence
+  award: Graduate Certificate in Human Resource Management
+  summary: GPA 3.46/4
