--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,13 +2,15 @@
 - degree: Master of Science in Information Design and Strategy
   uni: Northwestern University
   year: Expected graduation 2025 
-  awards: Graduate Certificate in Data Communication 2023 GPA 3.9/4
+  awards: Graduate Certificate in Data Communication 2023
+  awards: Graduate Certificate in Data Communication 2023
   summary: GPA 3.9/4
   
   
 - degree: Master of Business Administration
   uni: University of Illinois, Springfield
   year: 2017
+  award: Graduate Certificate in Business Intelligence
   award: Graduate Certificate in Business Intelligence
   award: Graduate Certificate in Human Resource Management
   summary: GPA 3.46/4
