--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,8 +2,8 @@
 - degree: Master of Science in Information Design and Strategy
   uni: Northwestern University
   year: Expected graduation 2025 
-  awards: Graduate Certificate in Data Communication 2023
-  awards: Graduate Certificate in Data Communication 2023
+  award: Graduate Certificate in Data Communication 2023
+  award: Graduate Certificate in Data Communication 2023
   summary: GPA 3.9/4
   
   
