--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,6 @@
   uni: Northwestern University
   year: Expected graduation 2025 
   award: Graduate Certificate in Data Communication 2023
-  award: Graduate Certificate in Data Communication 2023
   summary: GPA 3.9/4
   
   
@@ -11,6 +10,5 @@
   uni: University of Illinois, Springfield
   year: 2017
   award: Graduate Certificate in Business Intelligence
-  award: Graduate Certificate in Business Intelligence
-  award: Graduate Certificate in Human Resource Management
+  award2: Graduate Certificate in Human Resource Management
   summary: GPA 3.46/4
