--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,6 +4,11 @@
   year: Expected graduation 2025 
   award: Graduate Certificate in Data Communication 2023
   summary: GPA 3.9/4
+    Translate complex information into compelling visual forms and narratives, particularly within digital media
+    Lead cross-functional teams to develop and implement a comprehensive media communication strategy
+    Design seamless customer experiences that support an organization’s strategy across multiple digital platforms
+    Develop innovative solutions to complex business problems by combining analytical and creative skills
+
   
   
 - degree: Master of Business Administration
