--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,40 +3,11 @@
   uni: Northwestern University
   year: exp. 2025
   award: GPA 3.9/4
-  summary: 
-    Translate complex information into compelling visual forms and narratives, particularly within digital media.
-    Lead cross-functional teams to develop and implement a comprehensive media communication strategy.
-    Design seamless customer experiences that support an organization’s strategy across multiple digital platforms.
-    Develop innovative solutions to complex business problems by combining analytical and creative skills.
-    
-  award2: Graduate Certificate in Data Communication 2023
-  summary2: 
-    Translate complex information into compelling visual forms and narratives, particularly within digital media
-    Communicate complex data accurately and effectively
-    Translate data into narrative, and images that stakeholders can understand and utilize
-    Develop innovative solutions to complex business problems by combining analytical and creative skills
+  summary: K
 
 
 - degree: Master of Business Administration
   uni: University of Illinois, Springfield
   year: 2017
   award: GPA 3.46/4
-  summary: 
-    Understand key concepts and contemporary management theory and practice in the functional areas of business, including accounting, finance, information systems, marketing, operations management, organizational behavior, and research methods.
-    Understand the importance and demonstrate the use of cross-functional approaches to solving organizational problems.
-    Demonstrate disciplined managerial skills, including analysis, planning, and implementation, while considering the impacts of technology, globalization, emerging markets, and diversity in organizations.
-    Build a foundation for constructive assessment and exercise of leadership, decision-making, team management, power, and communication skills.
-
-  award1: Graduate Certificate in Business Intelligence
-  summary1: 
-  provides business and technology practitioners and other professionals with the knowledge and skills necessary to collaborate in the design, development, and adoption of Business Analytics applications in organizations. 
-  Business Analytics refers to a broad category of applications, technologies, and processes for gathering, storing, accessing, and analyzing internal and external data to help decision-makers analyze business situations and make fact-based, informed decisions which will trigger improvement actions.
-  
-  award2: Graduate Certificate in Human Resource Management
-  summary2: 
-    Be able to demonstrate an understanding of key human resource areas including strategic human resource planning, job analysis, recruitment, selection, orientation, training, career development, performance appraisal, compensation, incentives, union-management relations, diversity, succession planning and the role of human resources in the global organization
-    Be able to articulate the strategic role of human resources and its role and impact on organizational success
-    Be able to prepare professional level written documents for multiple organizational purposes and directed to a variety of stakeholder
-    Be able to systematically analyze organizational issues from a human resource perspective and recommend appropriate human resource solutions
-    Understand and articulate the impact of an organization’s external environment on human resource management and be able to articulate how human resource management can help an organization respond to challenges from the external environment
-
+  summary: K
