--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,11 +3,21 @@
   uni: Northwestern University
   year: exp. 2025
   award: GPA 3.9/4
-  summary: K
+  summary: 
+    Translate complex information into compelling visual forms and narratives, particularly within digital media.
+    Lead cross-functional teams to develop and implement a comprehensive media communication strategy.
+    Design seamless customer experiences that support an organization’s strategy across multiple digital platforms.
+    Develop innovative solutions to complex business problems by combining analytical and creative skills.
+
 
 
 - degree: Master of Business Administration
   uni: University of Illinois, Springfield
   year: 2017
   award: GPA 3.46/4
-  summary: K
+  summary: 
+    Understand key concepts and contemporary management theory and practice in the functional areas of business, including accounting, finance, information systems, marketing, operations management, organizational behavior, and research methods.
+    Understand the importance and demonstrate the use of cross-functional approaches to solving organizational problems.
+    Demonstrate disciplined managerial skills, including analysis, planning, and implementation, while considering the impacts of technology, globalization, emerging markets, and diversity in organizations.
+    Build a foundation for constructive assessment and exercise of leadership, decision-making, team management, power, and communication skills.
+
