--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,7 +3,7 @@
 
 # jazznotes.io
 - project: Data Mining for Business Analytics
-  role:
+  role: -
   duration: 2017
   # url: "#"
   description: 
@@ -11,10 +11,10 @@
   
   
 # Springfield Community Outreach Group
-- project: 
-  role: 
-  duration: 
+- project: -
+  role: -
+  duration: -
   # url: "#"
-  description: 
+  description: -
   
   
