--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ resume_section_associations:    false
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_website_url:            "https://rchum.github.io"
+  resume_github_url:            "https://rchum.github.io"
   
   resume_linkedin_url:          "https://www.linkedin.com/in/chumr"
  
