--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,7 +2,7 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # jazznotes.io
-- project: jazznotes.io
+- project: Data Mining for Business Analytics
   role: Founder & Primary Developer
   duration: 2012 &mdash; Present
   # url: "#"
