--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,13 +4,13 @@
 # jazznotes.io
 - project: Data Mining for Business Analytics
   role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
+  duration: 2017
   # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+  description: An in-depth knowledge of several data mining concepts, processes, and techniques including both supervised and unsupervised techniques. Comprehension, application and evaluation of the data mining techniques will develop the expertise to analyze data for better decision making.
 
 # Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
+- project: Visualization of Wine data
   role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
+  duration: 2023
   # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+  description: utilizing models of text and data, working within an open-source programming environment, and building interactive visualizations for the web. It reviews the psychology of human perception and cognition and best practices in visualization and web design. Assignments involve reviewing and developing interactive visualizations of text, time series, networks, and maps.
