--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,14 +3,14 @@
 
 # jazznotes.io
 - project: Data Mining for Business Analytics
-  role: Founder & Primary Developer
+  role: Data Analyst
   duration: 2017
   # url: "#"
-  description: An in-depth knowledge of several data mining concepts, processes, and techniques including both supervised and unsupervised techniques. Comprehension, application and evaluation of the data mining techniques will develop the expertise to analyze data for better decision making.
+  description: Applied in-depth knowledge of several data mining concepts, processes, and techniques including both supervised and unsupervised techniques. Comprehension, application and evaluation of the data mining techniques to develop the expertise in analyzing data for better decision making.
 
 # Springfield Community Outreach Group
 - project: Visualization of Wine data
-  role: Co-Founder & Organizer
+  role: Data Visualization Analyst
   duration: 2023
   # url: "#"
-  description: utilizing models of text and data, working within an open-source programming environment, and building interactive visualizations for the web. It reviews the psychology of human perception and cognition and best practices in visualization and web design. Assignments involve reviewing and developing interactive visualizations of text, time series, networks, and maps.
+  description: Utilized models of text and data, worked within an open-source programming environment, and built interactive visualizations for the web. Reviewed and developed interactive visualizations of text, time series, networks, and maps.
