--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,13 +4,13 @@
 # jazznotes.io
 - project: Data Mining for Business Analytics
   role: Data Analyst
-  duration: 2017
+  duration: January - May 2017
   # url: "#"
   description: Applied in-depth knowledge of several data mining concepts, processes, and techniques including both supervised and unsupervised techniques. Comprehension, application and evaluation of the data mining techniques to develop the expertise in analyzing data for better decision making.
 
 # Springfield Community Outreach Group
 - project: Visualization of Wine data
-  role: Data Visualization Analyst
-  duration: 2023
+  role: Data Visualization Designer
+  duration: January - March 2023
   # url: "#"
   description: Utilized models of text and data, worked within an open-source programming environment, and built interactive visualizations for the web. Reviewed and developed interactive visualizations of text, time series, networks, and maps.
