--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
 
 # Springfield Community Outreach Group
 - project: Visualization of Wine data
-  role: Data Visualization Designer
+  role: Data Visualization Analyst
   duration: January - March 2023
   # url: "#"
   description: Utilized models of text and data, worked within an open-source programming environment, and built interactive visualizations for the web. Reviewed and developed interactive visualizations of text, time series, networks, and maps.
