--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ resume_section_associations:    true
 resume_social_links:
   resume_github_url:            "https://rchum.github.io/main"
   resume_linkedin_url:          "https://www.linkedin.com/in/chumr"
-  resume_website_url:           "https://rchum.github.io/project1"
+  # resume_website_url:           "https://rchum.github.io/project1"
   
 resume_print_social_links:      true
 
