--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,7 +5,7 @@
 - project: Data Mining for Business Analytics
   role: Data Analyst
   duration: January - May 2017
-  # url: "#"
+  url: https://www.peta.org/
   description: Applied in-depth knowledge of several data mining concepts, processes, and techniques including both supervised and unsupervised techniques. Comprehension, application and evaluation of the data mining techniques to develop the expertise in analyzing data for better decision making.
 
 
