--- a/_data/education.yml
+++ b/_data/education.yml
@@ -9,8 +9,6 @@
     Design seamless customer experiences that support an organization’s strategy across multiple digital platforms.
     Develop innovative solutions to complex business problems by combining analytical and creative skills.
 
-
-
 - degree: Master of Business Administration
   uni: University of Illinois, Springfield
   year: 2017
@@ -21,3 +19,5 @@
     Demonstrate disciplined managerial skills, including analysis, planning, and implementation, while considering the impacts of technology, globalization, emerging markets, and diversity in organizations.
     Build a foundation for constructive assessment and exercise of leadership, decision-making, team management, power, and communication skills.
 
+degree: Bachelor of Science, Chemistry
+  uni: University of Illinois, Urbana-Champaign
