--- a/_data/education.yml
+++ b/_data/education.yml
@@ -19,6 +19,6 @@
     Demonstrate disciplined managerial skills, including analysis, planning, and implementation, while considering the impacts of technology, globalization, emerging markets, and diversity in organizations.
     Build a foundation for constructive assessment and exercise of leadership, decision-making, team management, power, and communication skills.
 
-- degree1: Bachelor of Science, Chemistry
-  uni1: University of Illinois, Urbana-Champaign
-  year1:
+# degree1: Bachelor of Science, Chemistry
+ # uni1: University of Illinois, Urbana-Champaign
+ # year1:
