--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,3 +14,11 @@
   duration: January - March 2023
   #url: https://www.linkedin.com/in/chumr/
   description: Utilized models of text and data, worked within an open-source programming environment, and built interactive visualizations for the web. Reviewed and developed interactive visualizations of text, time series, networks, and maps.
+
+
+- project: Data Mining for Business Analytics
+  role: Data Analyst
+  duration: January - May 2017
+  #url: https://www.linkedin.com/in/chumr/
+  description: Applied in-depth knowledge of several data mining concepts, processes, and techniques including both supervised and unsupervised techniques. Comprehension, application and evaluation of the data mining techniques to develop the expertise in analyzing data for better decision making.
+
