--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,13 +1,10 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
-
-
 - project: Data Mining for Business Analytics
   role: Data Analyst
   duration: January - May 2017
   #url: https://www.linkedin.com/in/chumr/
   description: Applied in-depth knowledge of several data mining concepts, processes, and techniques including both supervised and unsupervised techniques. Comprehension, application and evaluation of the data mining techniques to develop the expertise in analyzing data for better decision making.
-
 
 - project: Visualization of Wine data
   role: Data Visualization Designer
@@ -15,9 +12,14 @@
   #url: https://www.linkedin.com/in/chumr/
   description: Utilized models of text and data, worked within an open-source programming environment, and built interactive visualizations for the web. Reviewed and developed interactive visualizations of text, time series, networks, and maps.
 
-
 - project: Human Resource Management
   role: Human Resource (HR) Analyst
   duration: January - May 2017
   #url: https://www.linkedin.com/in/chumr/
   description: Constructed and explored the Human Resource (HR) Value Chain. Demonstrates the benefits of Human Resources processes which contributed towards the achievement of organizational goals.
+
+- project: Data Analytics Study Design
+  role: Data Analyst
+  duration: September - December 2022
+  #url: https://www.linkedin.com/in/chumr/
+  description: Defined the problem statement, developed a plan to collect needed data, identified the risks with the collection of such data, developed a research hypothesis, utilized techniques for the analysis of risk and for selecting appropriate testing, addressed ancillary environmental factors, and developed a Q&A section to answer potential questions from the users of the data analytics information.
