--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,9 +4,9 @@
   role: Data Analyst
   duration: January - May 2017
   #url: https://www.linkedin.com/in/chumr/
-  description: Applied in-depth knowledge of several data mining concepts, processes, and techniques including both supervised and unsupervised techniques. Comprehension, application and evaluation of the data mining techniques to develop the expertise in analyzing data for better decision making.
+  description: Applied in-depth knowledge of several data mining concepts, processes, and techniques, including both supervised and unsupervised techniques. Comprehension, application, and evaluation of the data mining techniques to develop expertise in analyzing data for better decision making.
 
-- project: Visualization of Wine data
+- project: Visualization of Wine Data
   role: Data Visualization Designer
   duration: January - March 2023
   #url: https://www.linkedin.com/in/chumr/
@@ -16,10 +16,10 @@
   role: Human Resource (HR) Analyst
   duration: January - May 2017
   #url: https://www.linkedin.com/in/chumr/
-  description: Constructed and explored the Human Resource (HR) Value Chain. Demonstrates the benefits of Human Resources processes which contributed towards the achievement of organizational goals.
+  description: Constructed and explored the Human Resource (HR) Value Chain. Demonstrates the benefits of human resources processes that contributed to the achievement of organizational goals.
 
 - project: Data Analytics Study Design
   role: Data Analyst
   duration: September - December 2022
   #url: https://www.linkedin.com/in/chumr/
-  description: Defined the problem statement, developed a plan to collect needed data, identified the risks with the collection of such data, developed a research hypothesis, utilized techniques for the analysis of risk and for selecting appropriate testing, addressed ancillary environmental factors, and developed a Q&A section to answer potential questions from the users of the data analytics information.
+  description: Defined the problem statement, developed a plan to collect needed data, identified the risks associated with the collection of such data, developed a research hypothesis, utilized techniques for the analysis of risk and for selecting appropriate testing, addressed ancillary environmental factors, and developed a Q&A section to answer potential questions from the users of the data analytics information.
