--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,7 +16,7 @@
   role: Human Resource (HR) Analyst
   duration: January - May 2017
   #url: https://www.linkedin.com/in/chumr/
-  description: Constructed and explored the Human Resource (HR) Value Chain. Demonstrates the benefits of human resources processes that contributed to the achievement of organizational goals.
+  description: Constructed and explored the Human Resource (HR) Value Chain. Demonstrated the benefits of human resources processes that contributed to the achievement of organizational goals.
 
 - project: Data Analytics Study Design
   role: Data Analyst
