--- a/_data/education.yml
+++ b/_data/education.yml
@@ -23,7 +23,7 @@
  # uni1: University of Illinois, Urbana-Champaign
  # year1:
  
- degree2: Graduate Certificate in Communication with Data
+ #degree2: Graduate Certificate in Communication with Data
  #degree3: Graduate Certificate in Business Intelligence
  #degree4: MGraduate Certificate in Human Resource Management
  
