--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,7 +3,7 @@
 - project: Data Mining for Business Analytics
   role: Data Analyst
   duration: January - May 2017
-  url: https://rchum.github.io/p1/
+  #url: https://rchum.github.io/p1/
   description: Applied in-depth knowledge of several data mining concepts, processes, and techniques, including both supervised and unsupervised techniques. Comprehension, application, and evaluation of the data mining techniques to develop expertise in analyzing data for better decision making.
 
 - project: Visualization of Wine Data
