--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -18,7 +18,7 @@
   #url: https://www.linkedin.com/in/chumr/
   description: Defined the problem statement, developed a plan to collect needed data, identified the risks associated with the collection of such data, developed a research hypothesis, utilized techniques for the analysis of risk and for selecting appropriate testing, addressed ancillary environmental factors, and developed a Q&A section to answer potential questions from the users of the data analytics information.
 
-- project: Visualization of Wine Data
+- project: Visualization of Data
   role: Data Visualization Designer
   duration: January - March 2023
   #url: https://www.linkedin.com/in/chumr/
