--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-- degree: Master of Science in Information Design and Strategy
+- degree: Master of Science in Information Design and Strategy</p><p>Graduate Certificate in Communication with Data</p>
   uni: Northwestern University
   year: exp. 2025
   award: GPA 3.9/4
