--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,18 +1,18 @@
 # Degree
-- degree: Master of Science in Information Design and Strategy</p><p>Graduate Certificate in Communication with Data</p>
+- degree: Master of Science in Information Design and Strategy exp. 2025</p><p>Graduate Certificate in Communication with Data 2023</p>
   uni: Northwestern University
-  year: exp. 2025
-  award: GPA 3.9/4
+  year: GPA 3.9/4
+  #award: 
   summary: 
     Translate complex information into compelling visual forms and narratives, particularly within digital media.
     Lead cross-functional teams to develop and implement a comprehensive media communication strategy.
     Design seamless customer experiences that support an organization’s strategy across multiple digital platforms.
     Develop innovative solutions to complex business problems by combining analytical and creative skills.
 
-- degree: Master of Business Administration
+- degree: Master of Business Administration 2017
   uni: University of Illinois, Springfield
-  year: 2017
-  award: GPA 3.46/4
+  year: GPA 3.46/4
+  #award: 
   summary: 
     Understand key concepts and contemporary management theory and practice in the functional areas of business, including accounting, finance, information systems, marketing, operations management, organizational behavior, and research methods.
     Understand the importance and demonstrate the use of cross-functional approaches to solving organizational problems.
