--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-- degree: <p>Master of Science in Information Design and Strategy exp. 2025</p><p>Graduate Certificate in Communication with Data 2023</p>
+- degree: <p>Master of Science in Information Design and Strategy exp. 2025<br>Graduate Certificate in Communication with Data 2023</p>
   uni: Northwestern University
   year: GPA 3.9/4
   #award: 
