--- a/_data/education.yml
+++ b/_data/education.yml
@@ -14,10 +14,10 @@
   year: GPA 3.46/4
   #award: 
   summary: 
-    Understand key concepts and contemporary management theory and practice in the functional areas of business, including accounting, finance, information systems, marketing, operations management, organizational behavior, and research methods.
-    Understand the importance and demonstrate the use of cross-functional approaches to solving organizational problems.
-    Demonstrate disciplined managerial skills, including analysis, planning, and implementation, while considering the impacts of technology, globalization, emerging markets, and diversity in organizations.
-    Build a foundation for constructive assessment and exercise of leadership, decision-making, team management, power, and communication skills.
+    Studied key concepts and contemporary management theory and practiced in the functional areas of business, including accounting, finance, information systems, marketing, operations management, organizational behavior, and research methods.
+    Studied the importance and demonstrated the use of cross-functional approaches to solving organizational problems.
+    Demonstrated disciplined managerial skills, including analysis, planning, and implementation, while considering the impacts of technology, globalization, emerging markets, and diversity in organizations.
+    Built a foundation for constructive assessment and exercise of leadership, decision-making, team management, power, and communication skills.
 
 # degree1: Bachelor of Science, Chemistry
  # uni1: University of Illinois, Urbana-Champaign
