--- a/_data/education.yml
+++ b/_data/education.yml
@@ -17,8 +17,7 @@
     Studied key concepts and contemporary management theory and practiced in the functional areas of business, including accounting, finance, information systems, marketing, operations management, organizational behavior, and research methods.
     Studied the importance and demonstrated the use of cross-functional approaches to solving organizational problems.
     Demonstrated disciplined managerial skills, including analysis, planning, and implementation, while considering the impacts of technology, globalization, emerging markets, and diversity in organizations.
-    Built a foundation for constructive assessment and exercise of leadership, decision-making, team management, power, and communication skills.
-    <p>Studied the body of human resource management knowledge including staffing, training and development, total compensation, employee relations, and labor relations.</p>
+    Built a foundation for constructive assessment and exercise of leadership, decision-making, team management, power, and communication skills.<p>Studied the body of human resource management knowledge including staffing, training and development, total compensation, employee relations, and labor relations.</p>
     <p>Explored processes and techniques for comprehension and evaluation of data mining for effective decision-making. Learned database design theory and development techniques focused on relational databases, including data modeling theories, theory implementation in CASE tools and data manipulation.
     </p>
 
