--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,10 +1,10 @@
 # Skills
 # Organizational leadership
 - skill: Skills
-  description: -
+  description: Indirect tax compliance
 # Communications strategy
 - skill: Software
-  description: -
+  description: SQL
 
 # Digital content development and creation
 - #skill: Digital content development and creation
