--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,36 +1,13 @@
 # Skills
 # Organizational leadership
-- #skill: Skills
+
+- skill: Software
+  description: ACL Analytics Affinity Designer Affinity Photo Alteryx Avalara CCH IntelliConnect CCH ProSystem fx Tax Final Cut Pro Google G Suite HTML InfoLease JD Edwards MS Access MS Dynamic GP OneSource Oracle E-Business Suite PowerBI Quickbook R RIA Checkpoint Salesforce CRM SFDC SAP Concur SAS E-Miner SQL TeamMate Audit software Tableau Vertex Indirect Tax Vertex O series
+  
+  
+  - #skill: Skills
   #description: Indirect tax compliance
 # Communications strategy
-- skill: Software
-  description: ACL Analytics
-Affinity Designer
-Affinity Photo
-Alteryx
-Avalara
-CCH IntelliConnect
-CCH ProSystem fx Tax
-Final Cut Pro
-Google G Suite
-HTML
-InfoLease
-JD Edwards
-MS Access
-MS Dynamic GP
-OneSource
-Oracle E-Business Suite
-PowerBI
-Quickbook
-R
-RIA Checkpoint
-Salesforce CRM SFDC
-SAP Concur SAS E-Miner
-SQL
-TeamMate Audit software
-Tableau
-Vertex Indirect Tax
-Vertex O series
 
 # Digital content development and creation
 - #skill: Digital content development and creation
