--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,10 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
-
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- #award: Outstanding Achievement
+  #organization: Springfield Young Professionals
+  #year: 2010, 2014
+  summary: ACL Analytics Affinity Designer Affinity Photo Alteryx Avalara CCH IntelliConnect CCH ProSystem fx Tax Final Cut Pro Google G Suite HTML InfoLease JD Edwards MS Access MS Dynamic GP OneSource Oracle E-Business Suite PowerBI Quickbook R RIA Checkpoint Salesforce CRM SFDC SAP Concur SAS E-Miner SQL TeamMate Audit software Tableau Vertex Indirect Tax Vertex O series
+  
+- #award: Most Likely To Succeed
+  #organization: Springfield High School
+  #year: 2004
+  #summary: Voted Most Likely To Succeed by a panel of my high school peers.
