--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -2,7 +2,7 @@
 - #award: Outstanding Achievement
   #organization: Springfield Young Professionals
   #year: 2010, 2014
-  summary: ACL Analytics Affinity Designer Affinity Photo Alteryx Avalara CCH IntelliConnect CCH ProSystem fx Tax Final Cut Pro Google G Suite HTML InfoLease JD Edwards MS Access MS Dynamic GP OneSource Oracle E-Business Suite PowerBI Quickbook R RIA Checkpoint Salesforce CRM SFDC SAP Concur SAS E-Miner SQL TeamMate Audit software Tableau Vertex Indirect Tax Vertex O series
+  #summary: ACL Analytics Affinity Designer Affinity Photo Alteryx Avalara CCH IntelliConnect CCH ProSystem fx Tax Final Cut Pro Google G Suite HTML InfoLease JD Edwards MS Access MS Dynamic GP OneSource Oracle E-Business Suite PowerBI Quickbook R RIA Checkpoint Salesforce CRM SFDC SAP Concur SAS E-Miner SQL TeamMate Audit software Tableau Vertex Indirect Tax Vertex O series
   
 - #award: Most Likely To Succeed
   #organization: Springfield High School
