--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -2,7 +2,7 @@
 - #award: Outstanding Achievement
   #organization: Springfield Young Professionals
   #year: 2010, 2014
-  summary: "ACL Analytics"&nbsp;"Affinity Designer"&nbsp;"Affinity Photo"&nbsp;"Alteryx"&nbsp;"Avalara"&nbsp;"CCH IntelliConnect"&nbsp;"CCH ProSystem fx Tax"&nbsp;"Final Cut Pro"&nbsp;"Google G Suite"&nbsp;"HTML"&nbsp;"InfoLease"&nbsp;"JD Edwards"&nbsp;"MS Access"&nbsp;"MS Dynamic GP"&nbsp;"OneSource"&nbsp;"Oracle E-Business Suite"&nbsp;"PowerBI"&nbsp;"Quickbook"&nbsp;"R"&nbsp;"RIA Checkpoint"&nbsp;"Salesforce CRM SFDC"&nbsp;"SAP Concur"&nbsp;"SAS E-Miner"&nbsp;"SQL"&nbsp;"TeamMate Audit software"&nbsp;"Tableau"&nbsp;"Vertex Indirect Tax"&nbsp;"Vertex O series"
+  summary: "ACL Analytics&nbsp;Affinity Designer&nbsp;Affinity Photo&nbsp;Alteryx&nbsp;Avalara&nbsp;CCH IntelliConnect&nbsp;CCH ProSystem fx Tax&nbsp;Final Cut Pro&nbsp;Google G Suite&nbsp;HTML&nbsp;InfoLease&nbsp;JD Edwards&nbsp;MS Access&nbsp;MS Dynamic GP&nbsp;OneSource&nbsp;Oracle E-Business Suite&nbsp;PowerBI&nbsp;Quickbook&nbsp;R&nbsp;RIA Checkpoint&nbsp;Salesforce CRM SFDC&nbsp;SAP Concur&nbsp;SAS E-Miner&nbsp;SQL&nbsp;TeamMate Audit software&nbsp;Tableau&nbsp;Vertex Indirect Tax&nbsp;Vertex O series"
   
 - #award: Most Likely To Succeed
   #organization: Springfield High School
