--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ resume_title:                   "Tax & Technology Professional"
 resume_contact_email:           "rchum2@illinois.edu"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "331-308-0008"
-resume_contact_address:         "PO Box 681492, Schaumburg IL 60168"
+#resume_contact_telephone:       "331-308-0008"
+#resume_contact_address:         "PO Box 681492, Schaumburg IL 60168"
 
-resume_header_contact_info:     "PO Box 681492, Schaumburg IL 60168 • 331-308-0008 • rchum2@illinois.edu"
+#resume_header_contact_info:     "PO Box 681492, Schaumburg IL 60168 • 331-308-0008 • rchum2@illinois.edu"
 display_header_contact_info:    "false"
 
 resume_header_intro: "<p>Technological advancements are happening at an unprecedented pace, and it can be challenging to adapt to these changes. However, it is important to remember that learning and adapting is a continuous process, and it is never too late to start.</p><p>‘Stay hungry. Stay foolish.’ - Steve Jobs</p>"
@@ -29,7 +29,7 @@ resume_header_intro: "<p>Technological advancements are happening at an unpreced
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+#resume_looking_for_work:        "yes"
 
 # Decide which sections to use
 # comment out to hide
