--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_email:           "rchum2@illinois.edu"
 #resume_header_contact_info:     "PO Box 681492, Schaumburg IL 60168 • 331-308-0008 • rchum2@illinois.edu"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Technological advancements are happening at an unprecedented pace, and it can be challenging to adapt to these changes. However, it is important to remember that learning and adapting is a continuous process, and it is never too late to start.</p><p>‘Stay hungry. Stay foolish.’ - Steve Jobs</p><p>Resume</p><img src="Ron Chum, MBA-1.pdf"></img>"
+resume_header_intro: "<p>Technological advancements are happening at an unprecedented pace, and it can be challenging to adapt to these changes. However, it is important to remember that learning and adapting is a continuous process, and it is never too late to start.</p><p>‘Stay hungry. Stay foolish.’ - Steve Jobs</p><p>Resume(Ron Chum, MBA-1.pdf)</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
