--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ resume_section_projects:        true
 resume_section_skills:          false
 resume_section_recognition:     true
 resume_section_links:           false
-resume_section_associations:    false
+resume_section_associations:    True
 # resume_section_interests:       false
 
 # Resume social links
