--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,7 +1,8 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- #organization: PETA
+- organization: Resume
+<object data="Ron Chum, MBA-1.pdf" width="1000" height="1000" type='application/pdf'/>
   #role: Volunteer
   #year: 2001 &mdash; 2010
   #url: https://www.peta.org/
