--- a/_data/education.yml
+++ b/_data/education.yml
@@ -11,7 +11,7 @@
 
 - degree: <p>Master of Business Administration, 2017</p><p>Graduate Certificate in Business Intelligence, 2017</p><p>Graduate Certificate in Human Resource Management, 2017</p>
   uni: University of Illinois, Springfield
-  #year: Cumulative GPA 3.46/4
+  year: Cumulative GPA 3.46/4
   #award: 
   summary: 
     Studied key concepts and contemporary management theory and practiced in the functional areas of business, including accounting, finance, information systems, marketing, operations management, organizational behavior, and research methods.
