--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 # Degree
 - #degree: <p>Master of Science in Information Design and Strategy, exp. 2025</p><p class="small">Graduate Certificate in Communication with Data, 2023</p>
   uni: Northwestern University
-  year: <p>Master of Science in Information Design and Strategy, exp. 2025</p><p class="small">Graduate Certificate in Communication with Data, 2023</p>
+  year: 
   #award: 
   summary: 
     Translate complex information into compelling visual forms and narratives, particularly within digital media.
@@ -11,7 +11,7 @@
 
 - #degree: <p>Master of Business Administration, 2017</p><p>Graduate Certificate in Business Intelligence, 2017</p><p>Graduate Certificate in Human Resource Management, 2017</p>
   uni: University of Illinois, Springfield
-  year: <p>Master of Science in Information Design and Strategy, exp. 2025</p><p class="small">Graduate Certificate in Communication with Data, 2023</p>
+  year: 
   #award: 
   summary: 
     Studied key concepts and contemporary management theory and practiced in the functional areas of business, including accounting, finance, information systems, marketing, operations management, organizational behavior, and research methods.
