--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-- #degree: <p>Master of Science in Information Design and Strategy, exp. 2025</p><p class="small">Graduate Certificate in Communication with Data, 2023</p>
+- degree: <p>Master of Science in Information Design and Strategy, exp. 2025</p><p class="small">Graduate Certificate in Communication with Data, 2023</p>
   uni: Northwestern University
   year: 
   #award: 
@@ -9,7 +9,7 @@
     Design seamless customer experiences that support an organization’s strategy across multiple digital platforms.
     Develop innovative solutions to complex business problems by combining analytical and creative skills.
 
-- #degree: <p>Master of Business Administration, 2017</p><p>Graduate Certificate in Business Intelligence, 2017</p><p>Graduate Certificate in Human Resource Management, 2017</p>
+- degree: <p>Master of Business Administration, 2017</p><p>Graduate Certificate in Business Intelligence, 2017</p><p>Graduate Certificate in Human Resource Management, 2017</p>
   uni: University of Illinois, Springfield
   year: 
   #award: 
